--- a/app/src/main/res/layout/activity_barcode_scanner_main.xml
+++ b/app/src/main/res/layout/activity_barcode_scanner_main.xml
@@ -7,36 +7,49 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:textDirection="rtl"
     tools:context="com.example.andreyu.barcodescanner.BarcodeScannerMainActivity">
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Start Scanning"
         android:id="@+id/buttonScan"
+        android:layout_width="match_parent"
+        android:layout_height="92dp"
         android:onClick="triggerScan"
+        android:text="@string/scan_button"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:drawableTop="@drawable/start"
+        android:layout_centerHorizontal="true" />
 
     <com.journeyapps.barcodescanner.DecoratedBarcodeView
+        android:id="@+id/barcodeScanner"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:id="@+id/barcodeScanner"
-        android:layout_below="@+id/buttonScan"
         android:layout_alignParentStart="true"
-        android:visibility="gone">
-    </com.journeyapps.barcodescanner.DecoratedBarcodeView>
+        android:layout_below="@+id/buttonScan"
+        android:visibility="gone"
+        android:layout_marginTop="5dp"></com.journeyapps.barcodescanner.DecoratedBarcodeView>
 
-    <TextView
+    <ListView
+        android:id="@+id/lvItems"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textViewScanResult"
-        android:layout_below="@+id/barcodeScanner"
         android:layout_alignParentStart="true"
-        android:textSize="15dp"
+        android:layout_below="@+id/textViewTotal"
+        android:textDirection="rtl"
+        android:layout_marginTop="5dp">
+    </ListView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:text="@string/scan_result"
-        android:textDirection="anyRtl"
-        android:visibility="gone" />
+        android:text=""
+        android:id="@+id/textViewTotal"
+        android:background="@drawable/traffic"
+        android:layout_below="@+id/barcodeScanner"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"
+        android:gravity="center_vertical|center_horizontal" />
 
 </RelativeLayout>
