--- a/app/src/main/res/layout/item_barcode_scanner.xml
+++ b/app/src/main/res/layout/item_barcode_scanner.xml
@@ -3,74 +3,62 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
-    android:layoutDirection="rtl"
-    android:background="@android:color/black">
+    android:layoutDirection="rtl">
 
     <TextView
-        android:background="@android:color/white"
+        android:background="@drawable/item_menu_list_background"
         android:id="@+id/tvItemBarcode"
         android:layout_width="0sp"
         android:layout_height="20sp"
         android:textSize="13sp"
         android:textStyle="bold"
-        android:layout_margin="1sp"
+        android:layout_marginTop="1sp"
+        android:layout_marginRight="1sp"
+        android:paddingRight="3sp"
         android:textDirection="rtl"
         android:layout_weight="0.3"
-        android:text="@string/ItemCode" />
+        android:text="@string/ItemCode"
+        android:layout_marginEnd="1sp"
+        android:paddingEnd="3sp" />
 
     <TextView
-        android:background="@android:color/white"
+        android:background="@drawable/item_menu_list_background"
         android:id="@+id/tvItemName"
         android:layout_width="0sp"
         android:layout_height="20sp"
         android:textSize="13sp"
         android:textStyle="bold"
-        android:layout_marginBottom="1sp"
         android:layout_marginTop="1sp"
-        android:layout_marginLeft="1sp"
+        android:paddingRight="3sp"
         android:textDirection="rtl"
         android:layout_weight="0.45"
-        android:text="@string/ItemName" />
+        android:text="@string/ItemName"
+        android:paddingEnd="3sp" />
 
     <TextView
-        android:background="@android:color/white"
+        android:background="@drawable/item_menu_list_background"
         android:id="@+id/tvItemPrice"
         android:layout_width="0sp"
         android:layout_height="20sp"
         android:textSize="13sp"
         android:textStyle="bold"
-        android:layout_marginBottom="1sp"
         android:layout_marginTop="1sp"
-        android:layout_marginLeft="1sp"
         android:textDirection="rtl"
-        android:layout_weight="0.1"
+        android:layout_weight="0.15"
         android:text="@string/ItemPrice"
         android:gravity="center_horizontal" />
 
     <TextView
-        android:background="@android:color/white"
+        android:background="@drawable/item_menu_list_background"
         android:id="@+id/tvItemQuantity"
         android:layout_width="0sp"
         android:layout_height="20sp"
         android:textSize="13sp"
         android:textStyle="bold"
-        android:layout_marginBottom="1sp"
         android:layout_marginTop="1sp"
-        android:layout_marginLeft="1sp"
         android:textDirection="rtl"
-        android:layout_weight="0.05"
+        android:layout_weight="0.1"
         android:text="@string/Quantity"
         android:gravity="center_horizontal" />
-
-    <ImageButton
-        android:background="@android:color/white"
-        android:layout_width="0sp"
-        android:layout_weight="0.1"
-        android:layout_height="20sp"
-        android:id="@+id/imageButtonAdd"
-        android:layout_marginBottom="1sp"
-        android:layout_marginTop="1sp"
-        android:layout_marginLeft="1sp"
-        />
 
 </LinearLayout>
