--- a/app/src/main/res/layout/activity_barcode_scanner_main.xml
+++ b/app/src/main/res/layout/activity_barcode_scanner_main.xml
@@ -46,13 +46,12 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:text=""
         android:id="@+id/textViewTotal"
         android:background="@drawable/traffic"
         android:layout_below="@+id/barcodeScanner"
-        android:layout_centerHorizontal="true"
+        android:visibility="gone"
         android:gravity="center_vertical|center_horizontal"
-        android:visibility="gone" />
+        android:layout_centerHorizontal="true" />
 
     <ImageButton
         android:layout_width="match_parent"
@@ -62,6 +61,25 @@
         android:layout_centerHorizontal="true"
         android:src="@drawable/start"
         android:onClick="triggerScan"
-        android:background="@android:color/white" />
+        android:background="@android:color/white"
+        android:visibility="visible" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="החשבון המוערך"
+        android:id="@+id/textViewTotalText"
+        android:layout_below="@+id/barcodeScanner"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentEnd="false"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:visibility="gone"
+        android:layout_alignParentStart="false"
+        android:layout_toEndOf="@id/textViewTotal"
+        android:layout_marginLeft="2sp"
+        android:layout_alignBottom="@+id/textViewTotal"
+        android:gravity="center_vertical"
+        android:layout_alignParentRight="true" />
 
 </RelativeLayout>
